--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <link href="css/destaques.css" rel="stylesheet">
         <link href="css/diferenciais.css" rel="stylesheet">
         <link href="css/sobre.css" rel="stylesheet">
+        <link href="css/planos.css" rel="stylesheet">
+        <link href="css/contato.css" rel="stylesheet">
+        <link href="css/institucional.css" rel="stylesheet">
+        <link href="css/rodape.css" rel="stylesheet">
     </head>
     <body>
         <header class="cabecalho container">
@@ -27,6 +31,7 @@
                 </ul>
             </nav>
         </header>
+
         <main>
             <section class="chamada container">
                 <h1 class="chamada__titulo">Aplicativos Na Medida</h1>
@@ -130,6 +135,42 @@
                 <p>Entre em contato com a gente</p>
                 <a href="contato.html" class="contato__botao botao">Entre em contato</a>
             </section>
+
+            <section class="institucional container">
+                <h2 class="institucional__titulo">Institucional</h2>
+                <div class="institucional__conteudo">
+                    <div class="institucional__informacoes">
+                        <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
+                        <address class="institucional__endereco">
+                            Rua Vergueiro, 3185</br> Vila Mariana, São Paulo
+                        <article class=intitucional__contato>
+                            <p><a href="tel:+551155712751" class="institucional__contato-telefone">(11) 5571-2751</a> ou
+                            <a href="mailto:contato@apeperia.com" class="intitucional__contato-email">contato@apeperia.com</a></p>
+                       </article>
+                       </address>
+                    </div>
+                    <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
+                </div>
+            </section>
         </main>
+
+        <footer class="rodape container">
+            <img src="img/logo-apeperia.svg" alt="Logo Apeperia" class="rodape__logo">
+            <ul class="rodape__social">
+                <li><a href="#" class="rodape__midia"><img src="img/facebook.png" alt="Ícone do Facebook"></a></li>
+                <li><a href="#" class="rodape__midia"><img src="img/twitter.png" alt="Ícone do Twitter"></a></li>
+                <li><a href="#" class="rodape__midia"><img src="img/instagram.png" alt="Ícone do Instagram"></a></li>
+            </ul>
+            <nav>
+                <ul class="rodape__navegacao">
+                    <li class="rodape__link"><a href="#"></a>Sobre</li>
+                    <li class="rodape__link"><a href="#"></a>Planos</li>
+                    <li class="rodape__link"><a href="#"></a>Blog</li>
+                    <li class="rodape__link"><a href="#"></a>Destaques</li>
+                    <li class="rodape__link"><a href="#"></a>Institucional</li>
+                    <li class="rodape__link"><a href="#"></a>Contato</li>
+                </ul>
+            </nav>
+        </footer>
     </body>
 </html>
